hphp/test/zend/good/Zend/tests/traits/static_001.php
<?php

	trait TestTrait {
		public static function test() {
			return 'Test';
		}
	}

	class A {
		use TestTrait;
	}

	echo A::test();

?>